--- a/GK2.html
+++ b/GK2.html
@@ -13,41 +13,56 @@
 
     <div class="container">
       <div id="terning1" class="terning">
-        <div class="plet1"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
       </div>
       <div id="terning2" class="terning">
-        <div class="plet2"></div>
-        <div class="plet3"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
       </div>
 
       <div id="terning3" class="terning">
-        <div class="plet2"></div>
-        <div class="plet1"></div>
-        <div class="plet3"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
       </div>
 
       <div id="terning4" class="terning">
-        <div class="plet3"></div>
-        <div class="plet6"></div>
-        <div class="plet5"></div>
-        <div class="plet2"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
       </div>
 
       <div id="terning5" class="terning">
-        <div class="plet1"></div>
-        <div class="plet3"></div>
-        <div class="plet6"></div>
-        <div class="plet5"></div>
-        <div class="plet2"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
       </div>
 
       <div id="terning6" class="terning">
-        <div class="plet7"></div>
-        <div class="plet2"></div>
-        <div class="plet3"></div>
-        <div class="plet5"></div>
-        <div class="plet8"></div>
-        <div class="plet6"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
+        <div class="plet"></div>
       </div>
     </div>
   </body>
