added a separate style class for each dot on the grid

--- a/GK2.html
+++ b/GK2.html
@@ -12,57 +12,63 @@
     <button id="kast" onclick="kast()">Kast terninger</button>
 
     <div class="container">
-      <div id="terning1" class="terning">
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
+      <div id="terning1" class="terning side1">
+        <div class="plet a"></div>
+        <div class="plet b"></div>
+        <div class="plet c"></div>
+        <div class="plet d"></div>
+        <div class="plet e"></div>
+        <div class="plet f"></div>
+        <div class="plet g"></div>
       </div>
-      <div id="terning2" class="terning">
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-      </div>
-
-      <div id="terning3" class="terning">
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
+      <div id="terning2" class="terning side2">
+        <div class="plet a"></div>
+        <div class="plet b"></div>
+        <div class="plet c"></div>
+        <div class="plet d"></div>
+        <div class="plet e"></div>
+        <div class="plet f"></div>
+        <div class="plet g"></div>
       </div>
 
-      <div id="terning4" class="terning">
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
+      <div id="terning3" class="terning side3">
+        <div class="plet a"></div>
+        <div class="plet b"></div>
+        <div class="plet c"></div>
+        <div class="plet d"></div>
+        <div class="plet e"></div>
+        <div class="plet f"></div>
+        <div class="plet g"></div>
       </div>
 
-      <div id="terning5" class="terning">
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
+      <div id="terning4" class="terning side4">
+        <div class="plet a"></div>
+        <div class="plet b"></div>
+        <div class="plet c"></div>
+        <div class="plet d"></div>
+        <div class="plet e"></div>
+        <div class="plet f"></div>
+        <div class="plet g"></div>
       </div>
 
-      <div id="terning6" class="terning">
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
-        <div class="plet"></div>
+      <div id="terning5" class="terning side5">
+        <div class="plet a"></div>
+        <div class="plet b"></div>
+        <div class="plet c"></div>
+        <div class="plet d"></div>
+        <div class="plet e"></div>
+        <div class="plet f"></div>
+        <div class="plet g"></div>
+      </div>
+
+      <div id="terning6" class="terning side6">
+        <div class="plet a"></div>
+        <div class="plet b"></div>
+        <div class="plet c"></div>
+        <div class="plet d"></div>
+        <div class="plet e"></div>
+        <div class="plet f"></div>
+        <div class="plet g"></div>
       </div>
     </div>
   </body>
