added simple div to show the sum

--- a/GK2.html
+++ b/GK2.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <button id="kast" onclick="kast()">Kast terninger</button>
-
     <div class="container">
       <div id="terning1" class="terning side1">
         <div class="plet a"></div>
@@ -71,5 +70,6 @@
         <div class="plet g"></div>
       </div>
     </div>
+    <div id="sum">Sum: X</div>
   </body>
 </html>
